--- a/oe-typeahead.html
+++ b/oe-typeahead.html
@@ -375,8 +375,8 @@ An element which provides suggestions while typing input.
           this.value = item ? item[this.valueproperty] : undefined;
         } else {
           this.value = item;
-        }
-        this.fire('item-selected', item);
+        } 
+        this.fire('pt-item-confirmed', item);
 
         if(!this.multiple){
           this.$.dropdown.set('opened',false);
