Reverted the event to 'item-selected' , Minor change in demo.

--- a/demo/demo-oe-typeahead.html
+++ b/demo/demo-oe-typeahead.html
@@ -69,7 +69,7 @@
       <template>
         <template is="dom-bind">
           <oe-typeahead strict label="Search..." no-data-found={{noDataFound}} displayproperty="description" valueproperty="code" searchurl="../data/country/SEARCH_STRING.json"
-            dataurl="../data/country/VALUE_STRING.json" value="{{value}}" required></oe-typeahead>
+            dataurl="../data/country/VALUE_STRING.json" value="{{value}}"></oe-typeahead>
           <label>[[value]]</label>
         </template>
       </template>
