--- a/oe-typeahead.html
+++ b/oe-typeahead.html
@@ -288,7 +288,9 @@ An element which provides suggestions while typing input.
       _onKeyUp: function (e) {
 
         var keycode = e.keyCode || e.which || e.key;
-
+        if(!this.$.dropdown.opened){
+          return;
+        }
         if (keycode == 40) {
           // down key
           var suggestionsMenu = this.$.menu;
@@ -339,6 +341,9 @@ An element which provides suggestions while typing input.
           e.stopPropagation();
         } else if (e.keyCode == 9 && this._suggestions.length) {
           this.set('_suggestions',[]);
+        }else if (e.keyCode == 8){
+          //backspace pressed
+          this.set('_backSpacePressed',true);
         }
       },
       /**
@@ -418,6 +423,10 @@ An element which provides suggestions while typing input.
         }
         if (!this._suggestions) {
           this.set('_suggestions', []);
+        }
+        if(this._backSpacePressed){
+          this.set('_backSpacePressed',false);
+          return;
         }
         if (this.searchurl) {
           if (term == this.searchString) {
