Fix to validate the value during strict:false on ajax error

--- a/oe-typeahead.html
+++ b/oe-typeahead.html
@@ -283,6 +283,7 @@ An element which provides suggestions while typing input.
             }
           }
           self._setSelectedItem(newValue);
+          self.validate();
         }
       },
       _onKeyUp: function (e) {
