Calling validate method on Ajax response to validate value

--- a/oe-typeahead.html
+++ b/oe-typeahead.html
@@ -246,6 +246,7 @@ An element which provides suggestions while typing input.
               }
             }
             self._setSelectedItem(newValue);
+			self.validate();
           }
         } else {
           self.noDataFound = false;
